--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,7 @@ body {
 @media (min-width: 768px) {
   .loader {
     width: 64px;
-    height: 64px; 
+    height: 64px;
   }
 }
 
@@ -56,7 +56,7 @@ body {
   height: inherit;
   border-radius: 50%;
   transform: rotateX(70deg);
-  animation: 1s spin linear infinite;
+  animation: 1s hell linear infinite;
 }
 
 .loader:after {
@@ -85,7 +85,7 @@ body {
   }
 }
 
-@keyframes spin {
+@keyframes hell {
 
   0%,
   100% {
